lexer_parser/src/test/exempleFile/miniJaja/success/ifListExp.mjj
/************************/
/* Programme MiniJaja	*/
/* Validation du if	*/
/************************/

class arrayInt {

	main {
        int x = 5;
        if(x(5,2,3*3,5&&2)){
            
        };
	}
}