lexer_parser/src/test/exempleFile/miniJaja/fail/classNotNamed.mjj
class {
    int x = 1;


    int y = 2;

    int add(int x1, int y1){
        return x1 + y1;
    }

    main{
        int z = add(x, 1);
    }
    
}